# actix-react-session

./: Cargo.toml
.devcontainer/: devcontainer.json  docker-compose.yml
auth-session/: Cargo.toml
auth-session/src/: auth.rs  main.rs
react/: package.json  pnpm-lock.yaml  vite.config.ts
react/src/: App.tsx
