[workspace]
members = ["auth-session"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-identity = "0.5.2"
actix-session = "0.7.2"
serde = "1.0"
serde_json = "1.0.96"

env_logger = "0.10.0"
log = "0.4.17"
